# pulumi-rs-yaml

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: benchmark.yml  ci.yml  fuzz.yml  release.yml  security.yml
crates/pulumi-rs-yaml-converter/: Cargo.toml
crates/pulumi-rs-yaml-converter/src/: importer.rs  lib.rs  main.rs  names.rs  schema_loader.rs  server.rs
crates/pulumi-rs-yaml-converter/tests/: convert_tests.rs
crates/pulumi-rs-yaml-converter/tests/testdata/assets-archives/: expected.pp  input.yaml
crates/pulumi-rs-yaml-converter/tests/testdata/basic-resource/: expected.pp  input.yaml
crates/pulumi-rs-yaml-converter/tests/testdata/complex-interpolation/: expected.pp  input.yaml
crates/pulumi-rs-yaml-converter/tests/testdata/components/: expected.pp  input.yaml
crates/pulumi-rs-yaml-converter/tests/testdata/config-variables/: expected.pp  input.yaml
crates/pulumi-rs-yaml-converter/tests/testdata/dashes-in-names/: expected.pp  input.yaml
crates/pulumi-rs-yaml-converter/tests/testdata/func-name-shadowing/: expected.pp  input.yaml
crates/pulumi-rs-yaml-converter/tests/testdata/invoke-options/: expected.pp  input.yaml
crates/pulumi-rs-yaml-converter/tests/testdata/invokes/: expected.pp  input.yaml
crates/pulumi-rs-yaml-converter/tests/testdata/name-collisions/: expected.pp  input.yaml
crates/pulumi-rs-yaml-converter/tests/testdata/nested-map/: expected.pp  input.yaml
crates/pulumi-rs-yaml-converter/tests/testdata/outputs/: expected.pp  input.yaml
crates/pulumi-rs-yaml-converter/tests/testdata/pulumi-variables/: expected.pp  input.yaml
crates/pulumi-rs-yaml-converter/tests/testdata/resource-options/: expected.pp  input.yaml
crates/pulumi-rs-yaml-converter/tests/testdata/stack-reference/: expected.pp  input.yaml
crates/pulumi-rs-yaml-converter/tests/testdata/variables-builtins/: expected.pp  input.yaml
crates/pulumi-rs-yaml-core/: Cargo.toml
crates/pulumi-rs-yaml-core/benches/: core_bench.rs
crates/pulumi-rs-yaml-core/src/: classify.rs  completion.rs  config_types.rs  diag.rs  jinja.rs  lib.rs  multi_file.rs  packages.rs  pcl_gen.rs  schema.rs  source.rs  syntax.rs  type_check.rs
crates/pulumi-rs-yaml-core/src/ast/: expr.rs  interpolation.rs  mod.rs  parse.rs  property.rs  template.rs  visitor.rs
crates/pulumi-rs-yaml-core/src/eval/: builtins.rs  callback.rs  config.rs  context.rs  evaluator.rs  graph.rs  mock.rs  mod.rs  protobuf.rs  resolver.rs  resource.rs  starlark_runtime.rs  value.rs
crates/pulumi-rs-yaml-core/tests/: gcpx_tests.rs  integration.rs  jinja_tests.rs  multi_file_tests.rs  security_tests.rs  starlark_tests.rs
crates/pulumi-rs-yaml-language/: Cargo.toml  Pulumi.yaml
crates/pulumi-rs-yaml-language/src/: clients.rs  component_provider.rs  exec.rs  main.rs  runner.rs  schema_loader.rs  server.rs  template_loader.rs
crates/pulumi-rs-yaml-language/tests/: language_tests.rs
crates/pulumi-rs-yaml-proto/: Cargo.toml
crates/pulumi-rs-yaml-proto/src/: lib.rs
crates/pulumi-rs-yaml-python/: Cargo.toml  build_binaries.sh  pyproject.toml
crates/pulumi-rs-yaml-python/python/pulumi_yaml_rs/: __init__.py  _find_binary.py  _native.pyi  cli.py
crates/pulumi-rs-yaml-python/src/: convert.rs  lib.rs
crates/pulumi-rs-yaml-python/tests/: conftest.py  test_builtins.py  test_cli_integration.py  test_execution_plan.py  test_expr_serialization.py  test_integration.py  test_jinja.py  test_parse_template.py  test_project_loading.py  test_type_conversions.py
fuzz/: Cargo.toml
fuzz/corpus/converter/: basic.yaml
fuzz/corpus/fuzz_parallel_eval/: config_vars_resources.yaml  default_provider.yaml  diamond_dag.yaml  independent_resources.yaml  wide_fan.yaml
fuzz/corpus/interpolation/: basic.txt  complex.txt  edge.txt
fuzz/corpus/jinja/: blocks.yaml
fuzz/corpus/yaml_parser/: anchors.yaml  basic.yaml  nested.yaml
fuzz/fuzz_targets/: fuzz_builtins.rs  fuzz_converter.rs  fuzz_extra_context.rs  fuzz_interpolation.rs  fuzz_jinja.rs  fuzz_parallel_eval.rs  fuzz_starlark.rs  fuzz_yaml_bomb.rs  fuzz_yaml_parser.rs
tests/acceptance/: conftest.py  run_acceptance.sh  run_gcpx_acceptance.sh  run_go_harness.sh  test_e2e_gcp.py  test_e2e_gcp_multifile.py
tests/acceptance/comprehensive/: Pulumi.storage.yaml  Pulumi.yaml
tests/acceptance/gcp-advanced-options/: Pulumi.yaml
tests/acceptance/gcp-assets/: Pulumi.yaml  test-content.txt
tests/acceptance/gcp-bucket/: Pulumi.yaml
tests/acceptance/gcp-builtins/: Pulumi.builtins-acceptance-test-1770815136.yaml  Pulumi.yaml  test-data.txt
tests/acceptance/gcp-config-types/: Pulumi.yaml
tests/acceptance/gcp-cross-file-dag/: Pulumi.storage.yaml  Pulumi.tables.yaml  Pulumi.yaml
tests/acceptance/gcp-exec-jinja-bucket/: Pulumi.exec-acceptance-test-1770814927.yaml  Pulumi.yaml
tests/acceptance/gcp-get-resource/: Pulumi.phase2.yaml  Pulumi.yaml  run_test.sh
tests/acceptance/gcp-interpolation/: Pulumi.yaml
tests/acceptance/gcp-invoke-options/: Pulumi.yaml
tests/acceptance/gcp-jinja-bucket/: Pulumi.yaml
tests/acceptance/gcp-jinja-single-line/: Pulumi.yaml
tests/acceptance/gcp-multi-file/: Pulumi.logging.yaml  Pulumi.storage.yaml  Pulumi.yaml
tests/acceptance/gcp-multi-file-jinja/: Pulumi.logging.yaml  Pulumi.storage.yaml  Pulumi.yaml
tests/acceptance/gcp-multi-resource-deps/: Pulumi.yaml
tests/acceptance/gcp-new-builtins-full/: Pulumi.yaml
tests/acceptance/gcp-parent-resource/: Pulumi.yaml
tests/acceptance/gcp-preview-only/: Pulumi.yaml
tests/acceptance/gcp-provider-explicit/: Pulumi.yaml
tests/acceptance/gcp-readfile-bigquery/: Pulumi.yaml
tests/acceptance/gcp-readfile-schema/: Pulumi.yaml  cors.json  labels.json  lifecycle.yaml  schema.json  version.txt
tests/acceptance/gcp-resource-options/: Pulumi.yaml
tests/acceptance/gcp-secret-config/: Pulumi.yaml
tests/acceptance/gcp-stack-reference/: Pulumi.yaml
tests/acceptance/gcpx-dbt-jinja/: create.resources.yaml  update.resources.yaml  update.yaml
tests/acceptance/gcpx-dbt-model-crud/: create.yaml  update.yaml
(+19 files in other folders)
