[workspace.package]
license = "AGPL-3.0-or-later"

[workspace]
resolver = "2"
members = [
    "crates/pulumi-rs-yaml-proto",
    "crates/pulumi-rs-yaml-core",
    "crates/pulumi-rs-yaml-language",
    "crates/pulumi-rs-yaml-converter",
    "crates/pulumi-rs-yaml-python",
]

[workspace.dependencies]
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tonic-build = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
semver = "1"
base64 = "0.22"
minijinja = { version = "2", features = ["debug"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py39"] }
heck = "0.5"
hcl-rs = "0.19"
pretty_assertions = "1"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.release-small]
inherits = "release"
opt-level = "z"
