[package]
name = "pulumi-rs-yaml-converter"
version = "0.2.0"
edition = "2021"
description = "Pulumi YAML converter plugin (Rust implementation)"
license.workspace = true

[[bin]]
name = "pulumi-converter-yaml"
path = "src/main.rs"

[dependencies]
pulumi-rs-yaml-proto = { path = "../pulumi-rs-yaml-proto" }
pulumi-rs-yaml-core = { path = "../pulumi-rs-yaml-core" }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
heck = { workspace = true }
base64 = { workspace = true }
tokio-stream = "0.1"

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
