[package]
name = "pulumi-rs-yaml-proto"
version = "0.2.0"
edition = "2021"
description = "Protobuf/gRPC definitions for Pulumi language host (pre-generated)"
license.workspace = true

[lib]
doctest = false

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
